--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,9 +1,20 @@
 .card {
-  background-color: #c4c4c4;
-  height: 570px;
+  background-color: #d1cece;
+  height: 500px;
   width: 350px;
   padding: 15px;
   position: relative;
   justify-self: center;
   clip-path: polygon(15% 0%, 100% 0, 100% 90%, 85% 100%, 0 100%, 0% 10%);
+}
+.image-container {
+  background-color: #fff;
+  padding: 25px;
+  clip-path: polygon(15% 0%, 100% 0, 100% 86%, 85% 100%, 0 100%, 0% 16%);
+}
+
+.image-container img {
+  height: 150px;
+  width: 100%;
+  object-fit: contain;
 }
