--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -18,3 +18,14 @@
   width: 100%;
   object-fit: contain;
 }
+@media screen and (max-width: 1100px) {
+  .card {
+    background-color: #d1cece;
+    height: 500px;
+    width: 300px;
+    padding: 15px;
+    position: relative;
+    justify-self: center;
+    clip-path: polygon(15% 0%, 100% 0, 100% 90%, 85% 100%, 0 100%, 0% 10%);
+  }
+}
